--- a/app/templates/main/transfer_modal.j2
+++ b/app/templates/main/transfer_modal.j2
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="">
+                <form id="transferForm" action="" method="post">
                     <input class="form-control" type="hidden" name="src_id">
                     <input class="form-control" type="hidden" name="dst_id">
                     <div class="form-row">
@@ -24,14 +24,14 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-5 col-12">
-                            <input class="form-control" type="number" name="src_amount">
+                            <input class="form-control" type="number" name="src_amount" required>
                             <small class="form-text text-muted"></small>
                         </div>
                         <div class="col-2 text-center" style="font-size: 200%">
                             <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
                         </div>
                         <div class="form-group col-md-5 col-10">
-                            <input class="form-control" type="number" name="dst_amount">
+                            <input class="form-control" type="number" name="dst_amount" required>
                             <small class="form-text text-muted"></small> 
                             <div id="same_currency">
                                 <i class="fa fa-lock" aria-hidden="true"></i>
@@ -61,9 +61,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="date_issued">Date & Time of Transaction</label>
+                        <input class="form-control" type="text" name="date_issued" maxlength=16 
+                            pattern="((0[1-9]|[12]\d|3[01]).(0[13578]|1[02]).\d{4}|(0[1-9]|[12]\d|30).(0[469]|11).\d{4}|(0[1-9]|1\d|2[0-8]).02.\d{4}|29.02.\d\d(0[048]|[13579][26]|[2468][048])) ([01]\d|2[0-3]):[0-5][0-9]"
+                            required {% if edit %}value="{{ tr.date_to_fmt() }}"{% endif %}>
+                        <small class="form-text text-muted">dd.mm.yyyy hh:mm</small>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="submit" form="transferForm" class="btn btn-primary">Add new Transfer</button>
             </div>
         </div>
     </div>
