Flows, Flows, Flows
- Flows in Transaction Modals
- Differ between:
    - "sub" flows via some other transaction
    - direct flows to/from agents
    - remote flows (Frontend yet to come)
- `Change` Class:
    - normal Transaction
    - direct flow Transaction
    - AccountTransfer
- moved Account out for import dependencies
- TODO:
    - RemoteFlow Frontend
    - AccountTransfer Edit

--- a/app/templates/main/add_acc.j2
+++ b/app/templates/main/add_acc.j2
@@ -42,10 +42,10 @@ function decimals() {
     {% endfor %}
 }
 $(document).ready(function() {
-    update_currency('input[type=number]', decimals());
+    update_currency('input[type=number]', decimals(), undefined, false);
 });
 $('select[name=currency]').change(function() {
-    update_currency('input[type=number]', decimals());
+    update_currency('input[type=number]', decimals(), undefined, false);
 });
 
 </script>
