--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -7,7 +7,11 @@ table.clickable-table > tbody > tr:hover {
 }
 
 #all_accounts {
-    font-size: 150%;
+    font-size: 1.5rem;
+}
+
+#all_accounts .modal {
+    font-size: 1rem;
 }
 
 table.dataTable thead .sorting:after,
