Check Saldo going below Zero correctly
- group.py, correct direct_flow_in handling
- macros.j2, format amounts

--- a/app/templates/main/macros.j2
+++ b/app/templates/main/macros.j2
@@ -37,7 +37,7 @@
             {% else %}
                 class="text-success"
             {% endif %}>
-            {{ change.amount }} {{ account.currency.code }}
+            {{ account.currency.format(change.amount) }} {{ account.currency.code }}
         </td>
         <td style="text-align: right;"  
             data-sort="{{ saldo }}">
