--- a/app/templates/main/changes.j2
+++ b/app/templates/main/changes.j2
@@ -1,6 +1,6 @@
 {% import "main/trans_modal.j2" as trans_modal %}
 
-{% macro trans_table_head() %}
+{% macro head() %}
     <col style="width:auto">
     <col style="width:auto">
     <col style="width:20%">
@@ -22,14 +22,14 @@
     </thead>
 {% endmacro %}
 
-{% macro trans_table_forloop(changes, redirect_url, account, agents, categories) %}
+{% macro rows(changes, redirect_url, account, agents, categories) %}
 {% for change in changes %}
     <tr>
         <td data-sort="{{ change.date_issued.strftime('%Y%m%d%H%M%s') }}">
             {{ change.date_issued.strftime('%d.%m.%Y') }}
         </td>
         <td>{{ change.date_issued.strftime('%H:%M') }}</td>
-        <td>{% if change.transfer %}<a href="{{ url_for('main.account', account_id=change.agent_id) }}">{{ change.agent }}</a>{% else %}{{ change.agent }}{% endif %}</td>
+        <td>{% if change.transfer %}<a href="{{ url_for('main.account', account_id=change.agent_id) }}">{% else %}<a href="{{ url_for('main.agent', agent_id=change.agent_id) }}">{% endif %}{{ change.agent }}</a></td>
         <td style="text-align: right;"  
             data-sort="{% if change.is_expense %}{{ change.amount }}{% else %}{{ -change.amount }}{% endif %}"
             {% if change.is_expense %}
