--- a/app/templates/main/layout.j2
+++ b/app/templates/main/layout.j2
@@ -15,6 +15,8 @@
     <script src="{{ url_for('static', filename='js/helpers.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css')}}"></link>
     <title>Finnance</title>
+    {% block head %}
+    {% endblock head %}
 </head>
 <body>
     <nav class="navbar navbar-dark bg-primary">
@@ -22,7 +24,7 @@
     </nav>
     <div class="container mt-4">
         {% block body %}
-        {% endblock %}
+        {% endblock body %}
     </div>
 </body>
 </html>
